--- a/Project5.ipynb
+++ b/Project5.ipynb
@@ -342,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pokemon Classification\n",
+    "## Pokemon Classification\n",
     "\n",
     "* *Purpose*: Make a model to predict whether a Pokemon is legnedary or not based on its attributes such as Attack, HP, Defense, etc."
    ]
